Bug 451705 - No tooltips for some buttons in git sidepanel
Summary: No tooltips for some buttons in git sidepanel
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.12.3
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-19 22:56 UTC by Jack Hill
Modified: 2022-08-25 19:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack Hill 2022-03-19 22:56:54 UTC
SUMMARY
The refresh button, hamburger menu, commit button, and project name button do not have tooltips.

STEPS TO REPRODUCE
1. Start Kate
2. Press "git" on the left sidebar
3. Mouse over the various buttons

OBSERVED RESULT
No tooltips for some buttons

EXPECTED RESULT
Should all have tooltips

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20220317
KDE Plasma Version: 5.24.3
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
For reference, Dolphin has the following tooltips:
- Refresh button -> "Refresh Document (F5)" (should probably be "Refresh document (F5)" anyway)
- Hamburger menu -> "Open Menu" (this may not be the best choice since other apps use different tooltips for hamburger menus)
Comment 1 Waqar Ahmed 2022-08-25 19:28:02 UTC
Git commit 8e2a5bb9a4d7634a805167e99b1e76fe2fec655f by Waqar Ahmed.
Committed on 25/08/2022 at 19:22.
Pushed by waqar into branch 'master'.

Add tooltips to some git buttons

M  +2    -0    addons/project/kateprojectpluginview.cpp
M  +1    -0    addons/project/kateprojectview.cpp

https://invent.kde.org/utilities/kate/commit/8e2a5bb9a4d7634a805167e99b1e76fe2fec655f