Add tooltips to some git buttons

BUG: 451705